<resources>
    <string name="app_name">Filmes em Cartaz</string>
    <string name="preco">Preço: R$</string>
    <string name="date">29/05/2020</string>
    <string name="date_label">Data:</string>
    <string name="valor_popul">29.85</string>
    <string name="descricao_film">Mussum Ipsum, cacilds vidis litro abertis. Quem num gosta di
        mim que vai caçá sua turmis! Quem num gosta di mé, boa gentis num é. Delegadis gente finis,
        bibendum egestas augue arcu ut est. Casamentiss faiz malandris se pirulitá.</string>

    <!-- FILMES -->
    <string name="filme_vote_average">Média de Votos:</string>
    <string name="titulo_do_filme">Titulo do Filme</string>
</resources>