<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardFilm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    app:cardElevation="10dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/no_image_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/titleFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/titulo_do_filme"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagFilm">

        </TextView>

        <ImageView
            android:id="@+id/imageMoney"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_voto_positivo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleFilm"
            app:layout_constraintStart_toStartOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/voteAverageFilmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/filme_vote_average"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageMoney"
            app:layout_constraintTop_toBottomOf="@id/titleFilm">

        </TextView>

        <TextView
            android:id="@+id/voteAverageFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/valor_popul"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/voteAverageFilmLabel"
            app:layout_constraintTop_toBottomOf="@id/titleFilm">

        </TextView>

        <ImageView
            android:id="@id/imageCalend"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_calendario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/voteAverageFilm">

        </ImageView>

        <TextView
            android:id="@+id/dateFilmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/date_label"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageCalend"
            app:layout_constraintTop_toBottomOf="@id/voteAverageFilm">

        </TextView>

        <TextView
            android:id="@+id/dateFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/date"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/dateFilmLabel"
            app:layout_constraintTop_toBottomOf="@id/voteAverageFilm"
            app:layout_constraintBottom_toBottomOf="parent">

        </TextView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>